fixed some spacing and adjusted the deselected buttons tylin gon the register page

--- a/src/components/login-page/login-page.css
+++ b/src/components/login-page/login-page.css
@@ -1,5 +1,5 @@
 .loginForm {
-  padding: 30px 50px;
+  padding: 15px 50px 30px 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
